[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "montecarlosim"
version = "0.1.0"
description = "MonteCarlo simulation library"
authors = ["Valerio Farrotti <valerio.farrotti@gmail.com>"]
maintainers = ["Valerio Farrotti <valerio.farrotti@gmail.com>"]
readme = "README.md"
license="MIT"
classifiers = [
    "Natural Language :: English",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",

    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "~1.24.0"
matplotlib = "~3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
tox = "^4.1.3"

[tool.poetry.scripts]
tests = 'run_tests:run'